# jj-commit

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: commit.rs  convention.rs  jj.rs  main.rs
src/commit/: conventional.rs  gitmoji.rs  mod.rs
src/convention/: conventional.rs  gitmoji.rs  mod.rs
src/types/: conventional.rs  gitmoji.rs  mod.rs
