[package]
name = "jj-commit"
version = "0.1.0"
edition = "2024"
description = "Simplify the jj commit experience"
repository = "https://github.com/Odonno/jjcc"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "jujutsu"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
inquire = "0.9.4"
jj-lib = "0.39.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "jjc"
path = "src/main.rs"
